<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bg_post"
    android:padding="4dp">


    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="19, November"
        android:textSize="25sp" />

    <GridLayout
        android:id="@+id/gv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">


        <ImageView
            android:id="@+id/imageView_person"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:src="@drawable/bussiness_man" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@drawable/ic_following"
            android:drawablePadding="10dp"
            android:text="@string/tv_following"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_value_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="100"
            android:textSize="25sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@drawable/ic_posts"
            android:drawablePadding="10dp"
            android:text="@string/tv_posts"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_value_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="100"
            android:textSize="25sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawableStart="@drawable/ic_followers"
            android:drawablePadding="10dp"
            android:text="@string/tv_followers"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_value_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="100"
            android:textSize="25sp"
            android:layout_marginStart="10dp"/>


        <Button
            android:id="@+id/btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:text="@string/btn_follow"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textColor="#F7F5F2"
            android:background="@drawable/bg_button"/>

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/default_name"
            android:textSize="25sp"
            android:textStyle="bold" />

    </GridLayout>

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gv_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:background="@color/bg_textView"
        android:padding="12dp"
        android:text="Welcome at my profile, you can follow me!"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_body"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <Button
            android:id="@+id/btn_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_heart"
            android:padding="5dp"
            android:text="@string/btn_like"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_share"
            android:padding="5dp"
            android:text="@string/btn_share"
            android:textAllCaps="false"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btn_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_comment"
            android:padding="5dp"
            android:text="@string/btn_comment"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>